# BurgerChat

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  chatClient.cc  chatClient.h  cmdLine.cc  cmdLine.h  info.h  interface.cc  interface.h  main.cc  winManager.cc  winManager.h
client/tests/: CMakeLists.txt  interface_test.cc
common/: addFriend.h  color.h  msg.h  type.h
docker/: Dockerfile
docs/: db.md  db_notes.md  mock.md  msg_cb.md  net_module.md  offNotification.md  offline.md  readme.md  signup.md  todo.md
logs/: client.txt  log.txt
model/: CMakeLists.txt  createTable.cc  friendManager.cc  friendManager.h  group.h  groupManager.cc  groupManager.h  groupUser.h  groupUserManager.cc  groupUserManager.h  offlineMsgManager.cc  offlineMsgManager.h  offlineNotificationManager.cc  offlineNotificationManager.h  table.sql  user.h  userManager.cc  userManager.h
model/tests/: CMakeLists.txt  friend_test.cc  group_unittest.cc  offlineMsg_test.cc  offlineNotification_test.cc  test_user.cc  test_user_add.cc  test_user_query.cc
server/: CMakeLists.txt  chatserver.cc  chatserver.h  chatservice.cc  chatservice.h  main.cc
